--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,7 +1,7 @@
 .topBanner{
     width: 100%;
     height: 400px;
-    background-image: url("http://localhost:3000/assets/cover.jpg");
+    background-image: url("https://ayush21042002.github.io/portfolio/assets/cover.jpg");
     display: flex;
     align-items: center;
     flex-direction: column;
